force-app/main/default/objects/Reimbursement__c/Reimbursement__c.object-meta.xml
<CustomObject>
    <description>Financial disbursement record tracking approved employee payout and payment gateway execution.</description>
    <label>Reimbursement</label>
    <nameField>
        <displayFormat>RMB-{00000}</displayFormat>
        <label>Reimbursement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reimbursements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>