force-app/main/default/objects/Reimbursement__c/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <description>Total financial amount approved for disbursement.</description>
    <label>Approved Amount</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>