force-app/main/default/objects/Reimbursement__c/fields/Bank_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Bank_Transaction_Id__c</fullName>
    <description>Bank confirmation or UTR reference number.</description>
    <label>Bank Transaction ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>