force-app/main/default/objects/Reimbursement__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Date payout reached employee account.</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>