force-app/main/default/objects/Reimbursement__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Beneficiary employee receiving reimbursement payout.</description>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reimbursements</relationshipName>
    <type>Lookup</type>
</CustomField>