force-app/main/default/objects/Reimbursement__c/fields/Expense_Report__c.field-meta.xml
<CustomField>
    <fullName>Expense_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated approved expense report.</description>
    <label>Expense Report</label>
    <referenceTo>Expense_Report__c</referenceTo>
    <relationshipLabel>Reimbursements</relationshipLabel>
    <relationshipName>Reimbursements</relationshipName>
    <type>Lookup</type>
</CustomField>