force-app/main/default/objects/Reimbursement__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Method through which payment was remitted.</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Direct Deposit / Bank Transfer</fullName><default>true</default><label>Direct Deposit / Bank Transfer</label></value>
            <value><fullName>Payroll Settlement</fullName><default>false</default><label>Payroll Settlement</label></value>
            <value><fullName>Corporate Card Offset</fullName><default>false</default><label>Corporate Card Offset</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>