force-app/main/default/objects/Reimbursement__c/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <description>External payment batch or reference number.</description>
    <label>Payment Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>