force-app/main/default/objects/Reimbursement__c/fields/Reimbursement_Status__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Status__c</fullName>
    <description>Payout execution lifecycle state.</description>
    <label>Reimbursement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Processing</fullName><default>false</default><label>Processing</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>On Hold</fullName><default>false</default><label>On Hold</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>