force-app/main/default/objects/Reimbursement__c/validationRules/Approved_Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Approved reimbursement amount must be greater than zero.</description>
    <errorConditionFormula>Approved_Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Approved_Amount__c</errorDisplayField>
    <errorMessage>Approved Amount must be greater than zero.</errorMessage>
</ValidationRule>